--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:8.0
     container_name: mysql_projekt_1
     restart: unless-stopped
-    env-file: .env.prod
+    env_file: .env.prod
     volumes:
       - db_projekt_1:/var/lib/mysql    
     networks:
@@ -15,11 +15,11 @@ services:
     pull: always
     container_name: wordpress_app_projekt_1
     depends_on:
-      - mysql_projekt_1
+      - mysql
     restart: unless-stopped
     ports:
       - 8080:80
-    env-file: .env.prod
+    env_file: .env.prod
     volumes:
       - ~/wordpress/projekt_1:/var/www/html/wp-content
     networks:
