--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,5 +53,6 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd wordpress/projekt_1 \
+            cd wordpress/projekt_1
+            docker compose pull -f compose.prod.yml
             docker compose -f compose.prod.yml up -d
