--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -11,8 +11,7 @@ services:
       - wordpress_network
 
   wordpress:
-    image: robertcieplinksi/projekt_1:latest
-    pull: always
+    image: robertcieplinski/projekt_1:latest
     container_name: wordpress_app_projekt_1
     depends_on:
       - mysql
@@ -20,14 +19,12 @@ services:
     ports:
       - 8080:80
     env_file: .env.prod
-    volumes:
-      - ~/wordpress/projekt_1:/var/www/html/wp-content
     networks:
       - wordpress_network
       - nginx-proxy_internal-net
 
 volumes:
-  db_projekt_1:
+  db_projekt_1
 networks:
   wordpress_network:
     driver: bridge
