--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,5 +54,6 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd wordpress/projekt_1
-            docker compose pull -f compose.prod.yml
+            docker compose -f compose.prod.yml down
+            docker compose -f compose.prod.yml pull
             docker compose -f compose.prod.yml up -d
